# numlang

./: .gitignore  README.md  compare  compare.c  flake.nix  function  function.c  hello  hello.c  input  input.c  pyproject.toml
custom_programs/: chaos.num  mandelbrot.num  prime_grid.num  rule30.num  terrain.num  walker.num
examples/: bitwise.num  compare.num  complex.num  factorial.num  fizzbuzz.num  floats.num  function.num  hello.num  hello_world.num  if.num  input.num  logical.num  math_ops.num  modulo.num  repeat.num  stack.num  stack_introspect.num  strings.num  trig.num  while.num
numlang/: ast.py  codegen_c.py  lexer.py  main.py  parser.py  runtime.c  sema.py
tests/: test_compiler.py
