[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "numlang-compiler"
version = "0.1.0"
description = "An esoteric stack-based language that compiles Numlang to C."
requires-python = ">=3.10"
authors = [{name = "ewanc26"}]

[project.scripts]
numlangc = "numlang.main:main"